kubernetes/uservice-ltdindexer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: u-ltdindexer
  labels:
    name: u-ltdindexer
spec:
  type: NodePort
  ports:
  - name: http
    port: 5000 # FIXME: must not conflict with any other services
    targetPort: 5000
    protocol: TCP
  selector:
    name: u-ltdindexer
